2007-06-04  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.1: document ARCH= option, and 
	add a sample pbuidlerrc

2007-05-28  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.1: document buildresult.
	* cowbuilder.8: 

	* cowbuilder.c: support buildresult

	* qemubuilder.c: support buildresult

2007-05-27  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: sync twice before shutdown.

	* qemubuilder.1: create from cowbuilder doc.

	* cowbuilder.8: fix doc

	* qemubuilder.c: support INITRD config option.

	* Makefile (install): add install target for qemubuilder.

2007-04-18  Junichi Uekawa  <dancer@debian.org>

	* Makefile: do not install qemubuilder for now.

	* qemubuilder.c (qemubuilder_create): fix deb source line.
	(qemu_arch_qemu): return kvm only when kvm is available.
	make this work with x86_64 host x86_64 target.	

2007-04-05  Junichi Uekawa  <dancer@debian.org>

	* qemubuilder.c: initial import to cowdancer repository.  rename
	functions to 'qemubuilder_'.
	(qemubuilder_create): add mirror place to call to 'debootstrap
	--second-stage'.

2007-03-08  Junichi Uekawa  <dancer@debian.org>

	* cowdancer.c(ctor): add constructor

	* tests/021_test_open.c (main): C source for testing it.
	(main): add check that initial open is the problem.

	* tests/021_test_open.sh (TESTCODE): create test for close(0);open(XXX,XXXX)=0;

2007-03-04  Junichi Uekawa  <dancer@debian.org>

	* cow-shell.c (main): remove use of /usr/lib and use value of
	LIBDIR

	* cowdancer.spec: create specfile

	* Makefile (install): fix makefile

2006-12-31  Junichi Uekawa  <dancer@debian.org>

	* Makefile (%.o): do not use strict aliasing for compiling
	cow-shell.c

	* cow-shell.c (ilistcreate): add debug hook.

	* tests/020_test_lchown.sh: add new test.

	* cow-shell.c (ilistcreate): include symbollic links to the list.

	* cowdancer.c (check_inode_and_copy, and others): do not
	canonicalize file name for lchown case. Add a new flag and change
	every function to use it.
