@@ -2,7 +2,7 @@ Source: cowdancer
 Section: utils
 Priority: optional
 Maintainer: Junichi Uekawa <dancer@debian.org>
-Build-Depends: debhelper (>> 4.0.0)
+Build-Depends: debhelper (>> 4.0.0), pbuilder
 Standards-Version: 3.7.2
 
 Package: cowdancer
