@@ -2,8 +2,10 @@ cowdancer (0.28) unstable; urgency=low
 
   * qemubuilder: add example pbuilderrc and document ARCH= option in
     manpage.
+  * Build-Depend on pbuilder, since cowbuilder/qemubuilder testsuite
+    requires pbuilder to run.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 04 Jun 2007 07:01:15 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Mon, 04 Jun 2007 07:28:22 +0900
 
 cowdancer (0.27) unstable; urgency=low
 
