@@ -1,5 +1,8 @@
 2007-06-04  Junichi Uekawa  <dancer@debian.org>
 
+	* tests/902_test_cowbuilder_fail.sh, etc.: skip when ran inside
+	cowbuilder.
+
 	* qemubuilder.1: document ARCH= option, and 
 	add a sample pbuidlerrc
 
